Fix list view alignments

--- a/desktop/apps/auction2/components/artwork_browser/main/artwork/ListArtwork.styl
+++ b/desktop/apps/auction2/components/artwork_browser/main/artwork/ListArtwork.styl
@@ -19,7 +19,7 @@
     text-decoration none
 
   &__image-container
-    width 30%
+    width 20%
 
     +respond-desktop()
       min-width 200px
@@ -42,7 +42,7 @@
     padding-right 20px
 
     +respond-desktop()
-      width 30%
+      width 44%
 
     > *
       +respond-desktop()
@@ -75,7 +75,7 @@
     position relative
 
     +respond-desktop()
-      width 10%
+      width 7%
 
     +respond-mobile()
       font-size 10px
